# Cruise-Control-System-Development

./: README.md
Sprint1/: README.md  controller.cpp  controller.h  controller.h.gch  cruise-control.md  cruise_control.cpp  cruise_control_2024.slx  cruise_control_2024.slxc  cruise_control_test.mat
Sprint2/: CruiseControl.cpp  CruiseControl.h  EulerSolver.h  EulerSolver.h.gch  README_FILE.sty  data_visualization.m  main.cpp  sim_output.csv
Sprint3/: CMakeLists.txt  data_visualization.m
Sprint3/ReadMe_and_Optimization/: Analysis_after_optimization.txt  README_FILE.sty  README_Sprint3.md  analysis_before_optimization.txt
Sprint3/include/: CruiseControl.h  EulerSolver.h
Sprint3/src/: CruiseControl.cpp  main.cpp
